[gd_scene load_steps=5 format=3 uid="uid://4j6m3cif0n2a"]

[ext_resource type="Script" uid="uid://cjpx0nmnutdsv" path="res://src/simple_lane.gd" id="1_niwxk"]
[ext_resource type="Material" uid="uid://cskmbe7egy0do" path="res://materials/floor_material.tres" id="1_rgtto"]
[ext_resource type="Material" uid="uid://ivhiwq5uee8g" path="res://materials/wall_material.tres" id="2_wpp1k"]

[sub_resource type="NavigationMesh" id="NavigationMesh_oltvt"]
vertices = PackedVector3Array(-6, 0.3, -34.54, -6, 0.3, 34.46, 6.25, 0.3, 34.46, 6.25, 0.3, -34.54)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[node name="Simple_lane" type="NavigationRegion3D"]
navigation_mesh = SubResource("NavigationMesh_oltvt")
script = ExtResource("1_niwxk")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 100, 0, 0, 0, 1, 0.005, -10, 0)
material_override = ExtResource("1_rgtto")
use_collision = true
size = Vector3(14, 0.2, 70)

[node name="Left_wall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, 0)
material_override = ExtResource("2_wpp1k")
use_collision = true
size = Vector3(0.5, 2, 70)

[node name="Right_wall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.50056386, 0)
visible = false
material_override = ExtResource("2_wpp1k")
use_collision = true
size = Vector3(0.5, 1, 70)

[node name="Spawner_blue" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -10)

[node name="Target_red" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -10)

[node name="Target_blue" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 10)

[node name="Spawner_red" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 10)
